--- a/BasicBlazor/BasicBlazor/Client/Pages/Index.razor
+++ b/BasicBlazor/BasicBlazor/Client/Pages/Index.razor
@@ -5,3 +5,5 @@
 Welcome to your new app!!!!
 
 <SurveyPrompt Title="How is Blazor working for you?" />
+<Counter />
+<!--<Counter IncrementAmount="10" /> 이런식으로 변화시킬 수 있음-->
