--- a/TodoList/TodoList/Client/Pages/Counter.razor
+++ b/TodoList/TodoList/Client/Pages/Counter.razor
@@ -9,11 +9,8 @@
 @code {
     private int currentCount = 0;
 
-    [Parameter]
-    public int IncrementAmount { get; set; } = 5; //초기값 설정인듯
-
     private void IncrementCount()
     {
-        currentCount += IncrementAmount;
+        currentCount++;
     }
 }
