--- a/TodoList/TodoList/Client/Pages/Index.razor
+++ b/TodoList/TodoList/Client/Pages/Index.razor
@@ -1,6 +1,6 @@
 ﻿@page "/"
 
-<h1 class="text-center">Articles</h1>
+<h1 class="text-center">Articles!!</h1>
 <div class="ipbox flex-column p-5">
     <div><input class="w-100 mb-3" placeholder="Title here!" @bind="newTitle" /></div>
     <div><textarea class="w-100" rows="10" placeholder="Article here!" @bind="newArticle"/></div>
