--- a/Chat/Chat/Client/Pages/Index.razor
+++ b/Chat/Chat/Client/Pages/Index.razor
@@ -1,13 +1,8 @@
 ﻿
 @using System
-@page "/"
-<div class="mysticky sticky-top w-100">
-    <ul class="sticky-ul d-flex flex-row-reverse">
-        <li><NavLink href="">심심이</NavLink></li>
-        <li><NavLink href="potato">말하는 감자</NavLink></li>
-        <li><NavLink href="everychat">나홀로채팅</NavLink></li>
-    </ul>
-</div>
+@page "/"  
+<MyNavi></MyNavi>
+
 <div class="d-flex justify-content-center">
     <div class="simsim-box d-flex flex-column justify-content-center mb-3 mt-5">
         @if (isEnglishMode)
