--- a/Chat/Chat/Client/Pages/Index.razor
+++ b/Chat/Chat/Client/Pages/Index.razor
@@ -1,12 +1,7 @@
 ﻿
 @using System
 @page "/"
-<div class="mysticky sticky-top w-100">
-    <ul class="sticky-ul d-flex flex-row-reverse">
-        <li><NavLink href="">심심이</NavLink></li>
-        <li><NavLink href="potato">말하는 감자</NavLink></li>
-    </ul>
-</div>
+<MyNavi></MyNavi>
 <div class="d-flex justify-content-center">
     @if (IsChange)
     {
